// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div class="hotkey-input"><label class="hotkey-input__label">Hotkey</label>
  <div class="hotkey-input__box">
    <div class="hotkey-input__control hotkey-input__control--disabled">
      <div class="hotkey-input__clicker" tooltip="{'content':'You can not input other special key'}"><span class="hotkey-special-text">Tab</span></div>
    </div>
    <div class="hotkey-input__control">
      <div class="hotkey-input__clicker" tooltip="{'content':'Press a key between 1 and 9 to select this'}">
        <more-horizontal-icon-stub></more-horizontal-icon-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches snapshot with the hotkey 1`] = `
<div class="hotkey-input"><label class="hotkey-input__label">Hotkey</label>
  <div class="hotkey-input__box">
    <div class="hotkey-input__control hotkey-input__control--disabled">
      <div class="hotkey-input__clicker" tooltip="{'content':'You can not input other special key'}"><span class="hotkey-special-text">Tab</span></div>
    </div>
    <div class="hotkey-input__control">
      <div class="hotkey-input__clicker" tooltip="{'content':'Press a key between 1 and 9 to select this'}"><span>1</span></div>
    </div>
  </div>
</div>
`;
